@@ -867,9 +867,8 @@ void parse_command_line(int argc, char **argv)
 	job_cond->without_steps = params.opt_allocs;
 
 	if(!job_cond->usage_start) {
-		if(job_cond->state_list)
-			job_cond->usage_start = time(NULL);
-		else {
+		job_cond->usage_start = time(NULL);
+		if(!job_cond->state_list)
 			struct tm start_tm;
 
 			if(!localtime_r(&job_cond->usage_start, &start_tm)) {
